# luaBR

./: .gitignore  deepseek.py  gpt.py  package-lock.json  pyproject.toml  tailwind.config.js
alembic/versions/: eaac135e98a3_updating_postsmodel.py
src/api/: main.py  run.py
src/api/infra/db/: database.py  session.py
src/api/models/: posts.py  user.py
src/api/routers/: auth.py  posts.py
src/api/schemas/: posts.py  user.py
src/api/services/: posts.py  user.py
src/api/utils/: check_owner.py  cookies.py
src/api/utils/depends/: request.py
src/api/utils/security/: cryptographer.py  hasher.py  token_manager.py
src/api/utils/users/: check_current_user.py
src/frontend/html/: new.html  register.html  success_register.html
src/frontend/html/auth/: login.html  register.html  success_register.html
src/frontend/html/blog/: create_post.html  post_not_found.html  posts.html  visualize_post.html
src/frontend/html/components/: error_card.html  footer.html  header.html  loading_overlay.html
src/frontend/js/: home.js
src/frontend/js/auth/: login.js  register.js
src/frontend/js/blog/: posts.js  visualize_post.js
src/frontend/js/blog/forms/: create_post.js
src/frontend/js/components/: header.js  overlay.js
src/frontend/js/utils/: get_cookie.js
